Remove FindDSound. Update FindDxxx.cmake files to use DXSDK_DIR variable (as in Allegro 5).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,10 +158,9 @@ endif()
 if(WIN32)
   find_package(DDraw)
   find_package(DInput)
-  find_package(DSound)
   find_package(DXGuid)
 
-  if(NOT DDRAW_FOUND OR NOT DINPUT_FOUND OR NOT DSOUND_FOUND OR NOT DXGUID_FOUND)
+  if(NOT DDRAW_FOUND OR NOT DINPUT_FOUND OR NOT DXGUID_FOUND)
     if(MSVC)
       message(FATAL_ERROR
         "DirectX required for Windows port. You might need to add DirectX include and lib directories to your INCLUDE and LIB environment variables.")
@@ -176,7 +175,6 @@ if(WIN32)
   include_directories(SYSTEM
     ${DDRAW_INCLUDE_DIR}
     ${DINPUT_INCLUDE_DIR}
-    ${DSOUND_INCLUDE_DIR}
     ${DXGUID_INCLUDE_DIR}
     )
 
@@ -190,7 +188,6 @@ if(WIN32)
     ${DDRAW_LIBRARIES}
     ${DXGUID_LIBRARIES}
     winmm
-    ${DSOUND_LIBRARIES}
     shlwapi
     psapi
     wininet
