--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,10 +157,9 @@ endif()
 
 if(WIN32)
   find_package(DDraw)
-  find_package(DInput)
   find_package(DXGuid)
 
-  if(NOT DDRAW_FOUND OR NOT DINPUT_FOUND OR NOT DXGUID_FOUND)
+  if(NOT DDRAW_FOUND OR NOT DXGUID_FOUND)
     if(MSVC)
       message(FATAL_ERROR
         "DirectX required for Windows port. You might need to add DirectX include and lib directories to your INCLUDE and LIB environment variables.")
@@ -174,7 +173,6 @@ if(WIN32)
 
   include_directories(SYSTEM
     ${DDRAW_INCLUDE_DIR}
-    ${DINPUT_INCLUDE_DIR}
     ${DXGUID_INCLUDE_DIR}
     )
 
@@ -184,7 +182,6 @@ if(WIN32)
     gdi32
     comdlg32
     ole32
-    ${DINPUT_LIBRARIES}
     ${DDRAW_LIBRARIES}
     ${DXGUID_LIBRARIES}
     winmm
