Remove jtheme and JTheme types, use Theme class directly. + Added CurrentTheme namespace. + Rename Theme::regen() to Theme::onRegenerate(). + ji_regen_theme() is in Theme::regenerate() member function.

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -37,11 +37,11 @@ add_library(gui-lib
   jstream.cpp
   jsystem.cpp
   jtextbox.cpp
-  jtheme.cpp
   jtooltips.cpp
   jview.cpp
   label.cpp
   preferred_size_event.cpp
   property.cpp
   slider.cpp
+  theme.cpp
   widget.cpp)
