Move jmalloc/jfree to base/ library as base_malloc/free (remove new/new0/renew macros).

--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(base-lib
   errno_string.cpp
   exception.cpp
   mem_utils.cpp
+  memory.cpp
   mutex.cpp
   path.cpp
   serialization.cpp
