Replace old gfx-data with graphics from the skin sheet. + Removed gfxdata.cpp file. + Removed get_gfx() from modules/gfx.h/cpp. + Added skin parts for each removed graphics of gfxdata. + Added IButtonIcon interface and an implementation for skin theme. + Removed "icon_buttons" from gui.cpp. + Now icons in button are set through set_gfxicon_to_button function. + Removed from Theme class check/radio_icon_size member variables   (they are replaced with the new IButtonIcon interface). + Removed jdraw_inverted_sprite(), now each icon has it normal/selected   version in the skin sheet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -213,6 +213,7 @@ add_library(aseprite-library
   raster/stock.cpp
   raster/undo.cpp
   settings/ui_settings_impl.cpp
+  skin/button_icon_impl.cpp
   skin/skin_theme.cpp
   skin/skin_property.cpp
   skin/skin_slider_property.cpp
