Fix compiling on Linux when XDGA is detected (fixed issue #12).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ if(UNIX AND NOT APPLE AND NOT BEOS)
     "${X11_LIB_SEARCH_PATH}" XDGA_FOUND)
 
   if(XDGA_FOUND)
-    list(APPEND PLATFORM Xxf86dga ${X11_LIBRARIES})
+    list(APPEND PLATFORM_LIBS Xxf86dga ${X11_LIBRARIES})
   endif()
 endif()
 
